--- a/TASK 6.ipynb
+++ b/TASK 6.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**TASK 6 - Prediction using Decision Tree Algorithm**\n",
     "\n",
-    "**Author : SATHISH PRASAD A**\n",
+    "**Author : KIRUTHIGA MOHAN**\n",
     "\n",
     "---\n",
     "\n",
